--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TextureRemixSimple
+application.vendor=Tom
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TextureRemixSimple.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-io-2.5.jar=C:\\Users\\Tom\\Documents\\Programming\\JavaLibs\\commons-io-2.5\\commons-io-2.5.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-io-2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -50,6 +54,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-io-2.5.jar=C:\\Users\\Tom\\Documents\\Programming\\JavaLibs\\commons-io-2.5\\commons-io-2.5-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
